<resources>
    <string name="app_name">Donation Boi</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>

    <string name="error_account_not_recognized">Username or password is incorrect</string>
    <string name="error_email_already_registered">This email address has already been
        registered.</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="cancel_button">Cancel</string>

    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>

    <string name="title_activity_registration">Registration</string>
    <string name="reg_username">Username</string>
    <string name="reg_full_name">Full name</string>
    <string name="reg_email_address">Email address</string>
    <string name="reg_password">Password</string>
    <string name="reg_password_info">(Must have at least 2 uppercase, 3 lowercase, 1 special
        and 2 numeric characters)</string>
    <string name="reg_user_type">User type:</string>
    <string name="title_activity_store_view">StoreViewActivity</string>
    <string name="title_activity_item_view">ItemView</string>
    <string name="title_activity_add_item_form">AddItemForm</string>

    <string name="add_button_text">Add</string>
    <string name="add_item">Add item</string>
    <string name="add_time_btn_add">Add</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
    <string name="full_name">Full name</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">Welcome!</string>
    <string name="item_name">Item name</string>
    <string name="item_type">Item type</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="search_items">Search items…</string>
    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="store">Store</string>
    <string name="type">Type</string>
    <string name="short_description">Short Description</string>
    <string name="category">Category</string>
    <string name="timestamp">Timestamp</string>
    <string name="logout">Logout</string>
    <string name="map">Map</string>
    <string name="item_name_filled">Name: %s</string>
    <string name="item_type_filled">Type: %s</string>
    <string name="item_price_filled">Price: $%.2f</string>
    <string name="item_desc_filled">Description: %s</string>
    <string name="item_desc_short_filled">Short Description: %s</string>
    <string name="item_category_filled">Category: %s</string>
    <string name="item_donation_time_filled">Donation time: %s</string>

</resources>
