<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".controllers.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_username" />

        <EditText
            android:id="@+id/field_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_email_address" />

        <EditText
            android:id="@+id/field_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="email"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_full_name" />

        <EditText
            android:id="@+id/field_name"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:autofillHints="name"
            android:ems="10"
            android:hint="@string/full_name"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_password_info" />

        <EditText
            android:id="@+id/field_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_user_type" />

        <Spinner
            android:id="@+id/field_user_type"
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="110dp"
                android:layout_height="58dp"
                android:text="@string/cancel" />

            <Space
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="110dp"
                android:layout_height="58dp"
                android:text="@string/register" />


        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

    </LinearLayout>
</ScrollView>
